--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		// specification status (e.g. WD, LCWD, WG-NOTE, etc.). If in doubt use ED.
 		specStatus:          "ED",
 		//publishDate:  		"2016-10-16",
-		//previousPublishDate: "2016-10-12",
+		previousPublishDate: "2016-11-15",
 		//previousMaturity:  	"FPWD",
 	
 	
