--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
             <li>Of interest: when are bullet lists first found in Ethiopic writing and in what form?</li>
           </ol>
         </div>
-        <!-- See reference: http://unicode-search.net/unicode-namesearch.pl?term=DIAMOND -->
+        <!-- See reference: https://unicode-search.net/unicode-namesearch.pl?term=DIAMOND -->
     </section>
 
     <section id="counter_suffix">
@@ -1095,7 +1095,7 @@
       <p>The Unicode standard encodes Ethiopic syllables for many languages using Ethiopic script past and present.
          Alphabetic lists are commonplace in Ethiopic literature, but will conform to the letter inventory of the language of the surrounding content.
          The W3C’s <a href="https://www.w3.org/International/core/Overview">Internationalization Working Group</a> publishes alphabetical
-         counter style code snippets for a <a href="http://w3c.github.io/predefined-counter-styles/#ethiopic-styles">large number of languages using Ethiopic script.</a>
+         counter style code snippets for a <a href="https://w3c.github.io/predefined-counter-styles/#ethiopic-styles">large number of languages using Ethiopic script.</a>
          Many of these lists are believed to be only hypothetical and based upon the letter inventory of the identified languages;
          but may not have been used in practice.  The alphabetical counter styles specified here encompass a smaller collection of languages with a
          demonstrated requirement as found by example in corpus or have come from stakeholder input.</p>
