--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <script class="remove">
       var respecConfig = {
 		// specification status (e.g. WD, LCWD, WG-NOTE, etc.). If in doubt use ED.
-		specStatus:          "ED",
+		specStatus:          	"ED",
 		//publishDate:  		"2016-10-16",
-		previousPublishDate: "2016-11-15",
-		//previousMaturity:  	"FPWD",
+		previousPublishDate: 	"2016-11-15",
+		previousMaturity:  		"WD",
 	
 	
-		noRecTrack:           true,
-		shortName:            "elreq",
+		noRecTrack:           	true,
+		shortName:            	"elreq",
 		copyrightStart: 		"2015",
-		edDraftURI:   		"https://w3c.github.io/elreq/",
+		edDraftURI:   			"https://w3c.github.io/elreq/",
 	
 		// if this is a LCWD, uncomment and set the end of its review period
 		// lcEnd: "2009-08-05",
@@ -40,8 +40,8 @@
 		wgPatentURI:  "https://www.w3.org/2004/01/pp-impl/32113/status",
 	};
     </script>
-    <link rel="stylesheet" href="local.css" type="text/css" />
-    <link rel="stylesheet" href="AbyssinicaSIL-webfont-elreq.css" type="text/css">
+    <link rel="stylesheet" href="local.css" />
+    <link rel="stylesheet" href="AbyssinicaSIL-webfont-elreq.css">
   </head>
   <body>
     <div id="abstract">
