--- a/gap-analysis/index.html
+++ b/gap-analysis/index.html
@@ -19,7 +19,7 @@
       noRecTrack:           true,
       shortName:            "elreq-gap",
       copyrightStart:       "2018",
-      edDraftURI:           "http://w3c.github.io/elreq/gap-analysis/",
+      edDraftURI:           "https://w3c.github.io/elreq/gap-analysis/",
 
       // if this is a LCWD, uncomment and set the end of its review period
       // lcEnd: "2009-08-05",
@@ -32,7 +32,7 @@
 
 
       wg:           "Internationalization Working Group",
-      wgURI:        "http://www.w3.org/International/core/",
+      wgURI:        "https://www.w3.org/International/core/",
  
  	  github:	"w3c/elreq",
       
@@ -48,7 +48,7 @@
       // This is important for Rec-track documents, do not copy a patent URI from a random
       // document unless you know what you're doing. If in doubt ask your friendly neighbourhood
       // Team Contact.
-      wgPatentURI:  "http://www.w3.org/2004/01/pp-impl/32113/status",
+      wgPatentURI:  "https://www.w3.org/2004/01/pp-impl/32113/status",
       // !!!! IMPORTANT !!!! MAKE THE ABOVE BLINK IN YOUR HEAD
     };
   </script>
@@ -62,8 +62,8 @@
   </div>
 
   <div id="sotd">
-    <p>This document describes and prioritises gaps for the support of languages using the Ethiopic script on the Web and in eBooks. In particular, it is concerned with text layout. It checks that needed features are supported in W3C specifications, in particular HTML and CSS and those relating to digital publications. It also checks whether the features have been implemented in browsers and ereaders. This document complements the document <a href="https://w3c.github.io/elreq/">Ethiopic Layout Requirements</a>, which describes the requirements for areas where gaps appear. It is linked to from the <a href="http://w3c.github.io/typography/gap-analysis/language-matrix.html">language matrix</a> that tracks Web support for many languages.</p>
-<p>The editor's draft of this document is being developed by the <a href="https://w3c.github.io/elreq/">Ethiopic Layout Task Force</a>, part of the W3C <a href="http://www.w3.org/International/ig/">Internationalization Interest Group</a>. It is published by the <a href="http://www.w3.org/International/core/">Internationalization Working Group</a>. The end target for this document is a Working Group Note.</p>
+    <p>This document describes and prioritises gaps for the support of languages using the Ethiopic script on the Web and in eBooks. In particular, it is concerned with text layout. It checks that needed features are supported in W3C specifications, in particular HTML and CSS and those relating to digital publications. It also checks whether the features have been implemented in browsers and ereaders. This document complements the document <a href="https://w3c.github.io/elreq/">Ethiopic Layout Requirements</a>, which describes the requirements for areas where gaps appear. It is linked to from the <a href="https://w3c.github.io/typography/gap-analysis/language-matrix.html">language matrix</a> that tracks Web support for many languages.</p>
+<p>The editor's draft of this document is being developed by the <a href="https://w3c.github.io/elreq/">Ethiopic Layout Task Force</a>, part of the W3C <a href="https://www.w3.org/International/ig/">Internationalization Interest Group</a>. It is published by the <a href="https://www.w3.org/International/core/">Internationalization Working Group</a>. The end target for this document is a Working Group Note.</p>
 </div>
 
   <section id="h_introduction">
