Style guide updates and migration to Abyssinica SIL v2.1

--- a/index.html
+++ b/index.html
@@ -499,8 +499,8 @@
     </section>
 
     <section id="ethiopic_gemination_mark_positioning">
-      <h4>Ethiopic Gemination Mark <span lang="am">(ጥበቅ)</span> Vertical Positioning</h4>
-      <p>The Ethiopic gemination mark, <span lang="am">ጥበቅ</span>, is almost universally found at a fixed height above the baseline in typeset literature. The mark’s position must
+      <h4>Ethiopic Gemination Mark <span lang="am">(ጥብቅ)</span> Vertical Positioning</h4>
+      <p>The Ethiopic gemination mark, <span lang="am">ጥብቅ</span>, is almost universally found at a fixed height above the baseline in typeset literature. The mark’s position must
          then be fixed so that it remains above the tallest Ethiopic letter symbol; this produces a variable height gap between the top of the letter and the mark.
          Conversely, when the symbol is hand written (often above typeset text) the mark will be found at a variable height above the baseline and demonstrating
          a fixed height above the letter symbol.
