Adding experiment with interlinear gloss approach.

--- a/zaima/ZaimaUseCases.html
+++ b/zaima/ZaimaUseCases.html
@@ -128,7 +128,7 @@ page sources of the samples appearing here.</p>
 the overall readibility of electronically laid out Zaima in general, and to evaluate the layout choices made here.</p>
 
 
-<h3>Use Case 1</h3>
+<h3 id="use-case-1">Use Case 1</h3>
 
 <p><strong>Features:</strong>
 <ul>
