Adding ASCII style tables following the CSS-Ruby-1 draft..

--- a/zaima/ZaimaUseCases.html
+++ b/zaima/ZaimaUseCases.html
@@ -266,7 +266,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 2</h3>
+<h3 id="use-case-2">Use Case 2</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -381,7 +381,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 3</h3>
+<h3 id="use-case-3">Use Case 3</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -504,7 +504,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 4</h3>
+<h3 id="use-case-4">Use Case 4</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -601,7 +601,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 5</h3>
+<h3 id="use-case-5">Use Case 5</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -751,7 +751,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 6</h3>
+<h3 id="use-case-6">Use Case 6</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -876,7 +876,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 7</h3>
+<h3 id="use-case-7">Use Case 7</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -978,7 +978,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 8</h3>
+<h3 id="use-case-8">Use Case 8</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -1097,7 +1097,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 9</h3>
+<h3 id="use-case-9">Use Case 9</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -1190,7 +1190,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 10</h3>
+<h3 id="use-case-10">Use Case 10</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -1263,7 +1263,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 11</h3>
+<h3 id="use-case-11">Use Case 11</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -1340,7 +1340,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 12</h3>
+<h3 id="use-case-12">Use Case 12</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -1403,7 +1403,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 13</h3>
+<h3 id="use-case-13">Use Case 13</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -1464,7 +1464,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 14</h3>
+<h3 id="use-case-14">Use Case 14</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -1539,7 +1539,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 15</h3>
+<h3 id="use-case-15">Use Case 15</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -1619,7 +1619,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 16</h3>
+<h3 id="use-case-16">Use Case 16</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -1762,7 +1762,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 17</h3>
+<h3 id="use-case-17">Use Case 17</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -1909,7 +1909,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 18</h3>
+<h3 id="use-case-18">Use Case 18</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -2078,7 +2078,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 19</h3>
+<h3 id="use-case-19">Use Case 19</h3>
 
 <p><strong>Features:</strong>
 <ul>
@@ -2228,7 +2228,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 20</h3>
+<h3 id="use-case-20">Use Case 20</h3>
 
 <p><strong>Features:</strong>
 <ul>
