typo fix: ትቅምት =› ጥቅም

--- a/index.html
+++ b/index.html
@@ -2214,7 +2214,7 @@
         <p><em>Transcribed Citation:</em><br/>
         <span style="margin-left:2em;"><cite>YeMaychew Qwuslegna</cite>, M. Zewdie. Page 56. Birhanena Selam Publishers, 1955 (1948 EC). Addis Ababa.</span></p>
         <p><em>Source Citation:</em><br/>
-        <span style="margin-left:2em;" lang="gez"><cite>የማይጨው፡ቍሶለኛ።</cite> መኰንን፡ዘውዴ። ገጽ ፶፮። ብርሃንና፡ሰላም፡ማተሚያ፡ቤት፣ ትቅምት፡፳፫፡ቀን፡፲፱፻፵፰፡ዓ.ም.። አዲስ፡አበባ።</span></p>
+        <span style="margin-left:2em;" lang="gez"><cite>የማይጨው፡ቍሶለኛ።</cite> መኰንን፡ዘውዴ። ገጽ ፶፮። ብርሃንና፡ሰላም፡ማተሚያ፡ቤት፣ ጥቅምት፡፳፫፡ቀን፡፲፱፻፵፰፡ዓ.ም.። አዲስ፡አበባ።</span></p>
       </dd>
     </dl>
   </section>
