minor progress, leading to format survey.

--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -105,6 +105,10 @@
     <h3>Overview</h3>
       <section id="h_punctuation_the_role_of" class="ok">
       <h4>The role of punctuation and the scope of this chapter</h4>
+      <p>The role of punctuation is functional and serves to segment text into smaller parts to benefit clarity of communication with the reader.
+      Punctuation should be used consistently to assure that the meaning of the segments they produce is not changing across the document.
+      The more subjective topic of how to use punctuation to break text into meaningful units is avoided here. Instead this section reviews
+      and recommends how to use specific punctuation, in combination with other punctuation and formatting approaches, to affect visual clarity.</p>
       </section>
     </section>
     <section id="h_punctuation_relation_to_surrounding_text" class="ok">
