Markup and editorial fixes

--- a/zaima/WhatIsZaima.html
+++ b/zaima/WhatIsZaima.html
@@ -1,10 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
+<meta charset="utf-8">
 <title>What is Zaima?</title>
-<meta name="description" content="What are 'zaima' notations?" />
-<script type="text/javascript">
+<meta name="description" content="What are 'zaima' notations?">
+<script>
 var f = { }
 
 // AUTHORS should fill in these assignments:
@@ -32,7 +32,7 @@ f.breadcrumb = 'markup'
 
 f.additionalLinks = ''
 </script>
-<script type="text/javascript">
+<script>
 function underlineSereyuAbbr(sereyu) {
 	var all = document.getElementsByClassName(  sereyu.id );
 	for (var i = 0; i < all.length; i++) {
@@ -113,7 +113,7 @@ function closeMessage(haleita) {
 <link rel="stylesheet" href="https://www.w3.org/International/style/article-2016.css" type="text/css" />
 <!-- remove the following local css declaration if there is nothing to add -->
 <link rel="stylesheet" href="https://www.w3.org/International/questions/qa-ruby-data/local.css" type="text/css" />
-<link rel="copyright" href="#copyright"/>
+<link rel="copyright" href="#copyright">
 <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 <style>
 /*
@@ -264,7 +264,7 @@ rt.sereyu { color: #daa520; }
      in a smaller point size (50-70% regular height as with the miliket).</p>
   </section>
   <section>
-  <h3 id="megdam"><a href="#alternative">Alternative (ምረጥ)</a></h3>
+  <h3 id="alternative"><a href="#alternative">Alternative (ምረጥ)</a></h3>
   <p><em>ምረጥ</em> (also called &ldquo;ምርጫ&rdquo;) is visually identical to a <a href="#medgam">Medgam</a> in that it is a scaled numeral placed in the margin,
      however it carries different semantics. An <code>alternative</code> does not indicate the repetition of a verse, rather,
      it indicates the presence of one or more alternate vocalizations of the verse in the notation lines above the present.</p>
@@ -291,8 +291,8 @@ rt.sereyu { color: #daa520; }
 <div>
 <div style="margin-left: 80px; margin-right: 160px; float:left; height: 800px;">
   <figure>
-   <p style="border: 1px solid black; width: 500px;">
-   <img style="vertical-align:top;" src="images/DiguaPage5-Sample.jpg" width="500px" style="border: black 1px solid;">
+   <p>
+   <img style="vertical-align:top; border: black 1px solid;" src="images/DiguaPage5-Sample.jpg" width="500">
    </p>
    <figcaption>Digua Page 5 Sample.</figcaption>
   </figure>
@@ -370,8 +370,8 @@ rt.sereyu { color: #daa520; }
   </ul>
 </section>
 
-<footer id="thefooter"></footer><script type="text/javascript">document.getElementById('thefooter').innerHTML = g.bottomOfPage</script>
-<script type="text/javascript">completePage()</script>
+<footer id="thefooter"></footer><script>document.getElementById('thefooter').innerHTML = g.bottomOfPage</script>
+<script>completePage()</script>
 
 </body>
 </html>
