--- a/zaima/ZaimaAsciiTables.html
+++ b/zaima/ZaimaAsciiTables.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta name="description" content="Zaima ASCII Tables"/>
-<script type="text/javascript">
+<script>
 var f = { }
 
 // AUTHORS should fill in these assignments:
