--- a/zaima/ZaimaModel.html
+++ b/zaima/ZaimaModel.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>A Document Model for Zaima Chant</title>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta name="description" content="How to use CSS styling to support ruby text for Asian languages." />
-<script type="text/javascript">
+<script>
 var f = { }
 
 // AUTHORS should fill in these assignments:
@@ -31,7 +31,7 @@ f.breadcrumb = 'markup';
 
 f.additionalLinks = ''
 </script>
-<script type="text/javascript">
+<script>
 function highlightMedgam(medgam) {
 	medgam.style.backgroundColor = 'yellow';
 	var all = document.getElementsByClassName(  medgam.id );
@@ -164,7 +164,7 @@ div.medgam { float: left; margin-left: -50px; line-height: 80%; bottom: -30px; p
 <link rel="stylesheet" href="https://www.w3.org/International/style/article-2016.css" type="text/css" />
 <!-- remove the following local css declaration if there is nothing to add -->
 <link rel="stylesheet" href="https://www.w3.org/International/questions/qa-ruby-data/local.css" type="text/css" />
-<link rel="copyright" href="#copyright"/>
+<link rel="copyright" href="#copyright">
 <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
