--- a/zaima/ZaimaUseCases.html
+++ b/zaima/ZaimaUseCases.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>Zaima Styling Use Cases</title>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta name="description" content="Use cases for zaima chant interlinear notation." />
-<script type="text/javascript">
+<script>
 var f = { }
 
 // AUTHORS should fill in these assignments:
@@ -40,7 +40,7 @@ f.additionalLinks = ''
 <link rel="stylesheet" href="https://www.w3.org/International/style/article-2016.css" type="text/css" />
 <!-- remove the following local css declaration if there is nothing to add -->
 <link rel="stylesheet" href="https://www.w3.org/International/questions/qa-ruby-data/local.css" type="text/css" />
-<link rel="copyright" href="#copyright"/>
+<link rel="copyright" href="#copyright">
 <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 <style>
