--- a/zaima/index.html
+++ b/zaima/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Layout and Styling of Zaima Chant with Web Standards</title>
-  <meta charset="utf-8" />
-  <meta name="description" content="Index of articles on supporting Zaima Chant in Web Browsers." />
-<script type="text/javascript">
+  <meta charset="utf-8">
+  <meta name="description" content="Index of articles on supporting Zaima Chant in Web Browsers.">
+<script>
 var f = { }
 
 // AUTHORS should fill in these assignments:
@@ -31,17 +31,17 @@ f.breadcrumb = 'markup';
 
 f.additionalLinks = ''
 </script>
-<link rel="stylesheet" href="zaima.css" type="text/css" />
-<script type="text/javascript" src="https://www.w3.org/International/questions/qa-ruby-data/translations.js"> </script>
-<script type="text/javascript" src="https://www.w3.org/International/javascript/doc-structure/article-dt.js"> </script>
-<script type="text/javascript" src="https://www.w3.org/International/javascript/boilerplate-text/boilerplate-en.js"></script><!--TRANSLATORS must change -en to the subtag for their language!-->
-<script type="text/javascript" src="https://www.w3.org/International/javascript/doc-structure/article.js"> </script>
-<script type="text/javascript" src="https://www.w3.org/International/javascript/articletoc-html5.js"></script>
+<link rel="stylesheet" href="zaima.css" type="text/css">
+<script src="https://www.w3.org/International/questions/qa-ruby-data/translations.js"> </script>
+<script src="https://www.w3.org/International/javascript/doc-structure/article-dt.js"> </script>
+<script src="https://www.w3.org/International/javascript/boilerplate-text/boilerplate-en.js"></script><!--TRANSLATORS must change -en to the subtag for their language!-->
+<script src="https://www.w3.org/International/javascript/doc-structure/article.js"> </script>
+<script src="https://www.w3.org/International/javascript/articletoc-html5.js"></script>
 <link rel="stylesheet" href="https://www.w3.org/International/style/article-2016.css" type="text/css" />
 <!-- remove the following local css declaration if there is nothing to add -->
 <link rel="stylesheet" href="https://www.w3.org/International/questions/qa-ruby-data/local.css" type="text/css" />
 <link rel="stylesheet" href="https://www.w3.org/International/techniques/common/techniques.css" type="text/css" />
-<link rel="copyright" href="#copyright"/>
+<link rel="copyright" href="#copyright">
 </head>
 <body>
 <section>
@@ -65,7 +65,7 @@ f.additionalLinks = ''
   </li>
   <li class="w3">
     <p class="link"><a href="ZaimaPlaypen.html">Zaima Playpen</a></p>
-    <p class="desc">Javascript and CSS experiments that manipulate Zaima display.</p>
+    <p class="desc">JavaScript and CSS experiments that manipulate Zaima display.</p>
   </li>
 </ul>
 </section>
